# xp-plus-plus

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: FetchMarco.cmake.in
include/XP++/: DataAccess.hpp  Message.hpp  Planes.hpp  Processing.hpp  UserPlugin.hpp
include/XP++/DataAccess/: DataRef.hpp  DataRefType.hpp  UserDataRef.hpp
include/XP++/Exceptions/: NotImplementedException.hpp  XPException.hpp
include/XP++/Plugins/: Plugin.hpp  PluginID.hpp  PluginInfo.hpp  Plugins.hpp
include/XP++/Processing/: FlightLoop.hpp  Timing.hpp
include/XP++/UI/: Menu.hpp  MenuItem.hpp  Menus.hpp
src/: CMakeLists.txt  Message.cpp  Planes.cpp  UserPlugin.cpp
src/DataAccess/: DataRef.cpp  DataRefType.cpp  UserDataRef.cpp
src/Plugins/: CMakeLists.txt  Plugin.cpp  PluginID.cpp  PluginInfo.cpp  Plugins.cpp
src/Processing/: FlightLoop.cpp  Timing.cpp
src/UI/: Menu.cpp  MenuItem.cpp  Menus.cpp
